@@ -1,203 +1,0 @@
-bin/hlansi.pl
-bin/hlhtml.pl
-Changes
-lib/Syntax/Highlight/Engine/Kate.pm
-lib/Syntax/Highlight/Engine/Kate.pod
-lib/Syntax/Highlight/Engine/Kate/ABC.pm
-lib/Syntax/Highlight/Engine/Kate/Ada.pm
-lib/Syntax/Highlight/Engine/Kate/AHDL.pm
-lib/Syntax/Highlight/Engine/Kate/Alerts
-lib/Syntax/Highlight/Engine/Kate/Alerts.pm
-lib/Syntax/Highlight/Engine/Kate/All.pm
-lib/Syntax/Highlight/Engine/Kate/ANSI_C89.pm
-lib/Syntax/Highlight/Engine/Kate/Ansys.pm
-lib/Syntax/Highlight/Engine/Kate/Apache_Configuration.pm
-lib/Syntax/Highlight/Engine/Kate/Asm6502.pm
-lib/Syntax/Highlight/Engine/Kate/ASP.pm
-lib/Syntax/Highlight/Engine/Kate/AVR_Assembler.pm
-lib/Syntax/Highlight/Engine/Kate/AWK.pm
-lib/Syntax/Highlight/Engine/Kate/Bash.pm
-lib/Syntax/Highlight/Engine/Kate/BibTeX.pm
-lib/Syntax/Highlight/Engine/Kate/C.pm
-lib/Syntax/Highlight/Engine/Kate/Cdash.pm
-lib/Syntax/Highlight/Engine/Kate/Cg.pm
-lib/Syntax/Highlight/Engine/Kate/CGiS.pm
-lib/Syntax/Highlight/Engine/Kate/ChangeLog.pm
-lib/Syntax/Highlight/Engine/Kate/Cisco.pm
-lib/Syntax/Highlight/Engine/Kate/Clipper.pm
-lib/Syntax/Highlight/Engine/Kate/CMake.pm
-lib/Syntax/Highlight/Engine/Kate/ColdFusion.pm
-lib/Syntax/Highlight/Engine/Kate/Common_Lisp.pm
-lib/Syntax/Highlight/Engine/Kate/ComponentminusPascal.pm
-lib/Syntax/Highlight/Engine/Kate/Cplusplus.pm
-lib/Syntax/Highlight/Engine/Kate/CSS.pm
-lib/Syntax/Highlight/Engine/Kate/CSS_PHP.pm
-lib/Syntax/Highlight/Engine/Kate/CUE_Sheet.pm
-lib/Syntax/Highlight/Engine/Kate/D.pm
-lib/Syntax/Highlight/Engine/Kate/De_DE.pm
-lib/Syntax/Highlight/Engine/Kate/Debian_Changelog.pm
-lib/Syntax/Highlight/Engine/Kate/Debian_Control.pm
-lib/Syntax/Highlight/Engine/Kate/Desktop.pm
-lib/Syntax/Highlight/Engine/Kate/Diff.pm
-lib/Syntax/Highlight/Engine/Kate/Doxygen.pm
-lib/Syntax/Highlight/Engine/Kate/E_Language.pm
-lib/Syntax/Highlight/Engine/Kate/Eiffel.pm
-lib/Syntax/Highlight/Engine/Kate/Email.pm
-lib/Syntax/Highlight/Engine/Kate/En_US.pm
-lib/Syntax/Highlight/Engine/Kate/Euphoria.pm
-lib/Syntax/Highlight/Engine/Kate/Ferite.pm
-lib/Syntax/Highlight/Engine/Kate/Fortran.pm
-lib/Syntax/Highlight/Engine/Kate/FourGL.pm
-lib/Syntax/Highlight/Engine/Kate/FourGLminusPER.pm
-lib/Syntax/Highlight/Engine/Kate/FreeBASIC.pm
-lib/Syntax/Highlight/Engine/Kate/GDL.pm
-lib/Syntax/Highlight/Engine/Kate/GLSL.pm
-lib/Syntax/Highlight/Engine/Kate/GNU_Assembler.pm
-lib/Syntax/Highlight/Engine/Kate/GNU_Gettext.pm
-lib/Syntax/Highlight/Engine/Kate/Haskell.pm
-lib/Syntax/Highlight/Engine/Kate/HTML.pm
-lib/Syntax/Highlight/Engine/Kate/IDL.pm
-lib/Syntax/Highlight/Engine/Kate/ILERPG.pm
-lib/Syntax/Highlight/Engine/Kate/Inform.pm
-lib/Syntax/Highlight/Engine/Kate/INI_Files.pm
-lib/Syntax/Highlight/Engine/Kate/Intel_x86_NASM.pm
-lib/Syntax/Highlight/Engine/Kate/Java.pm
-lib/Syntax/Highlight/Engine/Kate/Javadoc.pm
-lib/Syntax/Highlight/Engine/Kate/JavaScript.pm
-lib/Syntax/Highlight/Engine/Kate/JavaScript_PHP.pm
-lib/Syntax/Highlight/Engine/Kate/JSP.pm
-lib/Syntax/Highlight/Engine/Kate/Kate_File_Template.pm
-lib/Syntax/Highlight/Engine/Kate/KBasic.pm
-lib/Syntax/Highlight/Engine/Kate/LaTeX.pm
-lib/Syntax/Highlight/Engine/Kate/LDIF.pm
-lib/Syntax/Highlight/Engine/Kate/Lex_Flex.pm
-lib/Syntax/Highlight/Engine/Kate/LilyPond.pm
-lib/Syntax/Highlight/Engine/Kate/Literate_Haskell.pm
-lib/Syntax/Highlight/Engine/Kate/Logtalk.pm
-lib/Syntax/Highlight/Engine/Kate/LPC.pm
-lib/Syntax/Highlight/Engine/Kate/Lua.pm
-lib/Syntax/Highlight/Engine/Kate/M3U.pm
-lib/Syntax/Highlight/Engine/Kate/MABminusDB.pm
-lib/Syntax/Highlight/Engine/Kate/Makefile.pm
-lib/Syntax/Highlight/Engine/Kate/Mason.pm
-lib/Syntax/Highlight/Engine/Kate/Matlab.pm
-lib/Syntax/Highlight/Engine/Kate/MIPS_Assembler.pm
-lib/Syntax/Highlight/Engine/Kate/Modulaminus2.pm
-lib/Syntax/Highlight/Engine/Kate/Music_Publisher.pm
-lib/Syntax/Highlight/Engine/Kate/Nl.pm
-lib/Syntax/Highlight/Engine/Kate/Objective_Caml.pm
-lib/Syntax/Highlight/Engine/Kate/ObjectiveminusC.pm
-lib/Syntax/Highlight/Engine/Kate/Octave.pm
-lib/Syntax/Highlight/Engine/Kate/Pascal.pm
-lib/Syntax/Highlight/Engine/Kate/Perl.pm
-lib/Syntax/Highlight/Engine/Kate/PHP_HTML.pm
-lib/Syntax/Highlight/Engine/Kate/PHP_PHP.pm
-lib/Syntax/Highlight/Engine/Kate/PicAsm.pm
-lib/Syntax/Highlight/Engine/Kate/Pike.pm
-lib/Syntax/Highlight/Engine/Kate/PostScript.pm
-lib/Syntax/Highlight/Engine/Kate/POVminusRay.pm
-lib/Syntax/Highlight/Engine/Kate/Progress.pm
-lib/Syntax/Highlight/Engine/Kate/Prolog.pm
-lib/Syntax/Highlight/Engine/Kate/PureBasic.pm
-lib/Syntax/Highlight/Engine/Kate/Python.pm
-lib/Syntax/Highlight/Engine/Kate/Quake_Script.pm
-lib/Syntax/Highlight/Engine/Kate/R_Script.pm
-lib/Syntax/Highlight/Engine/Kate/RenderMan_RIB.pm
-lib/Syntax/Highlight/Engine/Kate/REXX.pm
-lib/Syntax/Highlight/Engine/Kate/RPM_Spec.pm
-lib/Syntax/Highlight/Engine/Kate/RSI_IDL.pm
-lib/Syntax/Highlight/Engine/Kate/Ruby.pm
-lib/Syntax/Highlight/Engine/Kate/Sather.pm
-lib/Syntax/Highlight/Engine/Kate/Scheme.pm
-lib/Syntax/Highlight/Engine/Kate/Scilab.pm
-lib/Syntax/Highlight/Engine/Kate/SGML.pm
-lib/Syntax/Highlight/Engine/Kate/Sieve.pm
-lib/Syntax/Highlight/Engine/Kate/SML.pm
-lib/Syntax/Highlight/Engine/Kate/Spice.pm
-lib/Syntax/Highlight/Engine/Kate/SQL.pm
-lib/Syntax/Highlight/Engine/Kate/SQL_MySQL.pm
-lib/Syntax/Highlight/Engine/Kate/SQL_PostgreSQL.pm
-lib/Syntax/Highlight/Engine/Kate/Stata.pm
-lib/Syntax/Highlight/Engine/Kate/TaskJuggler.pm
-lib/Syntax/Highlight/Engine/Kate/Tcl_Tk.pm
-lib/Syntax/Highlight/Engine/Kate/Template.pm
-lib/Syntax/Highlight/Engine/Kate/TI_Basic.pm
-lib/Syntax/Highlight/Engine/Kate/ToolKit.pm
-lib/Syntax/Highlight/Engine/Kate/Txt2tags.pm
-lib/Syntax/Highlight/Engine/Kate/UnrealScript.pm
-lib/Syntax/Highlight/Engine/Kate/Velocity.pm
-lib/Syntax/Highlight/Engine/Kate/Verilog.pm
-lib/Syntax/Highlight/Engine/Kate/VHDL.pm
-lib/Syntax/Highlight/Engine/Kate/VRML.pm
-lib/Syntax/Highlight/Engine/Kate/Wikimedia.pm
-lib/Syntax/Highlight/Engine/Kate/WINE_Config.pm
-lib/Syntax/Highlight/Engine/Kate/XHarbour.pm
-lib/Syntax/Highlight/Engine/Kate/XML.pm
-lib/Syntax/Highlight/Engine/Kate/XML_Debug.pm
-lib/Syntax/Highlight/Engine/Kate/XMLData.pm
-lib/Syntax/Highlight/Engine/Kate/Xorg_Configuration.pm
-lib/Syntax/Highlight/Engine/Kate/Xslt.pm
-lib/Syntax/Highlight/Engine/Kate/Yacas.pm
-lib/Syntax/Highlight/Engine/Kate/Yacc_Bison.pm
-Makefile.PL
-MANIFEST
-META.yml			Module meta-data (added by MakeMaker)
-README
-REGISTERED
-samples/highlight.abc
-samples/highlight.ahdl
-samples/highlight.asm
-samples/highlight.asm-avr
-samples/highlight.asm-nasm
-samples/highlight.asp
-samples/highlight.awk
-samples/highlight.basetest
-samples/highlight.bib
-samples/highlight.cmake
-samples/highlight.cpp
-samples/highlight.css
-samples/highlight.desktop
-samples/highlight.do
-samples/highlight.dox
-samples/highlight.e
-samples/highlight.eml
-samples/highlight.exu
-samples/highlight.f90
-samples/highlight.glsl
-samples/highlight.hs
-samples/highlight.html
-samples/highlight.java
-samples/highlight.js
-samples/highlight.jsp
-samples/highlight.lex
-samples/highlight.lhs
-samples/highlight.lisp
-samples/highlight.ly
-samples/highlight.m
-samples/highlight.m3u
-samples/highlight.pb
-samples/highlight.php
-samples/highlight.pike
-samples/highlight.pl
-samples/highlight.pov
-samples/highlight.prg
-samples/highlight.ps
-samples/highlight.py
-samples/highlight.rb
-samples/highlight.rib
-samples/highlight.scheme
-samples/highlight.sh
-samples/highlight.sp
-samples/highlight.tcl
-samples/highlight.tex
-samples/highlight.uc
-samples/highlight.wrl
-samples/highlight.xml
-samples/highlight.xsl
-samples/highlight.y
-samples/highlight_lpc.c
-samples/highlight_ocaml.ml
-samples/highlight_octave.m
-samples/xorg.conf
-t/Kate.t
-t/02-perl.t
