@@ -1,10 +1,0 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Syntax-Highlight-Engine-Kate
-version:      0.04
-version_from: lib/Syntax/Highlight/Engine/Kate.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
